docs: Make page summary consistent with the meta-tag

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header class=container-fluid>
 		<h1>Dependencies</h1>
-		<p>Inspect module relations in RequireJS projects.</p>
+		<p>Inspects module relations in RequireJS projects.</p>
 		<div class=buttons>
 			<button id=theme-switcher class="btn btn-secondary btn-circle" type=button data-intro=#theme-switcher data-toggle=tooltip>
 				<span id=theme-switcher-text class=action-button></span>
